service.yaml
kind: Service
apiVersion: v1
metadata:
  name: react-service
spec:
  type: NodePort
  selector:
    app: react-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
