ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
spec:
  tls:
  - secretName: rimorin
  rules:
  - host: rimorin.me
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: react-service
            port:
              number: 80
