nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: react-nginx
  namespace: default
spec:
  rules:
    - host: rimorin.me
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
                serviceName: react-service
                servicePort: 80
            
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
        - rimorin.me
      secretName: rimorin
